Update validation logic for finding matrix, allow empty datum. Update validation logic to catch empty row and column. Update corresponding error message.
SVN-Revision: 17000